vendor/async-trait-0.1.50/tests/ui/self-span.rs
use async_trait::async_trait;

pub struct S {}

pub enum E {
    V {},
}

#[async_trait]
pub trait Trait {
    async fn method(self);
}

#[async_trait]
impl Trait for S {
    async fn method(self) {
        let _: () = self;
        let _: Self = Self;
    }
}

#[async_trait]
impl Trait for E {
    async fn method(self) {
        let _: () = self;
        let _: Self = Self::V;
    }
}

fn main() {}
